--- a/inst/htmlwidgets/rdeckControls.yaml
+++ b/inst/htmlwidgets/rdeckControls.yaml
@@ -1,7 +1,11 @@
-# (uncomment to add a dependency)
-# dependencies:
-#  - name:
-#    version:
-#    src:
-#    script:
-#    stylesheet:
+dependencies:
+   - name: system.js
+     version: 6.8.3
+     src: htmlwidgets/lib/systemjs-6.8.3
+     script: dist/system.js
+   - name: rdeckControlsLibrary
+     version: 0.999
+     src: htmlwidgets/lib/rdeckControlsLibrary-0.999
+     script: rdeckControlsLibrary.js
+
+   
