--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "prettier": "2.3.0",
+    "systemjs": "^6.8.3",
     "typescript": "^4.2.4"
   }
 }
