--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
     "compilerOptions": {
         "target": "ES2015",
-        "module": "ESNext",
+        "module": "system",
         "lib": ["dom", "ES2015"],
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "allowUmdGlobalAccess": true,
+        "outDir": "inst/htmlwidgets"
     }
 }
