--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "build": "webpack --mode production",
+    "watch-dev": "webpack --watch --mode development"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
@@ -7,6 +11,9 @@
     "eslint-plugin-import": "^2.22.1",
     "prettier": "2.3.0",
     "systemjs": "^6.8.3",
-    "typescript": "^4.2.4"
+    "ts-loader": "^9.1.2",
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0"
   }
 }
