--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ export(rdeckControlsOutput)
 export(rdeck_layer_dropdown)
 export(renderRdeckControls)
 import(htmlwidgets)
+importFrom(magrittr,"%>%")
