import generic method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(rdeckControlsOutput)
 export(rdeck_layer_dropdown)
 export(renderRdeckControls)
 import(htmlwidgets)
+importFrom(htmltools,as.tags)
 importFrom(magrittr,"%>%")
